Version 0.3 - ????-??-??
- Implement cursor save/restore (DECSC, DECRC, CSI s, CSI u).
- Implement scrolling region (DECSTBM).
- Implement soft terminal reset (DECSTR).
- Add support for modes.
    * alternate screen buffer
- Removed needless verbosity for some unimplemented commands.
- A few bug fixes.

Version 0.2.1 - 2010-08-14
- Fix a major bug that causes 0.2 to not work at all.

Version 0.2 - 2010-08-09
- Add HTML output format
- Implement the following sequences:
    * SGR (Set Graphics Attributes: bold, color, etc.)
    * ICH (Insert Character)
    * ED param 3 (Erase Saved Lines)
    * RIS (Reset)
- Add `rawcat' program
- Add testing framework and many tests
- Many bug fixes, including proper line wrapping / edge cases.

Version 0.1 - 2009-05-21
- Initial Release