@@ -63,7 +63,6 @@ REQUIREMENTS
 ============
 
 * Python 2.6
-* Numpy
 
 
 TODO
